*SVN*

* BCC headers are removed when sending via SMTP #1402

* Added 'content_type' accessor, to allow content type to be set on a per-message basis. content_type defaults to "text/plain".

* Silently ignore Iconv::IllegalSequence errors when converting text #1341 [lon@speedymac.com]

* Support attachments and multipart messages.

* Added new accessors for the various mail properties.

* Fix to only perform the charset conversion if a 'from' and a 'to' charset are given (make no assumptions about what the charset was) #1276 [Jamis Buck]

* Fix attachments and content-type problems #1276 [Jamis Buck]

* Fixed the TMail#body method to look at the content-transfer-encoding header and unquote the body according to the rules it specifies #1265 [Jamis Buck]

* Added unquoting even if the iconv lib can't be loaded--in that case, only the charset conversion is skipped #1265 [Jamis Buck]

* Added automatic decoding of base64 bodies #1214 [Jamis Buck]

* Added that delivery errors are caught in a way so the mail is still returned whether the delivery was successful or not

* Fixed that email address like "Jamis Buck, M.D." <wild.medicine@example.net> would cause the quoter to generate emails resulting in "bad address" errors from the mail server #1220 [Jamis Buck]


*0.9.1* (20th April, 2005)

* Depend on Action Pack 1.8.1


*0.9.0* (19th April, 2005)

* Added that deliver_* will now return the email that was sent

* Added that quoting to UTF-8 only happens if the characters used are in that range #955 [Jamis Buck] 

* Fixed quoting for all address headers, not just to #955 [Jamis Buck]

* Fixed unquoting of emails that doesn't have an explicit charset #1036 [wolfgang@stufenlos.net]


*0.8.1* (27th March, 2005)

* Fixed that if charset was found that the end of a mime part declaration TMail would throw an error #919 [lon@speedymac.com]

* Fixed that TMail::Unquoter would fail to recognize quoting method if it was in lowercase #919 [lon@speedymac.com]
